--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -20,6 +20,7 @@
     <script src="./src/js/app.js"></script>
     <!-- include spec files here... -->
     <script src="./spec/js/app.spec.js"></script>
+    <script src="./spec/js/ClickCounter.spec.js"></script>
 </body>
 
 </html>
