--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module 4 Project</title>
-    <link rel = "stylesheet" type="text.css" href="style.css" />
+    <link rel = "stylesheet" href="/src/css/style.css" />
 </head>
 <body>
+    <h1>Cookie Crumbler</h1>
     <div class="dropdown">
-        <button onclick="dropdownmenu()"
-        class="dropbtn">More Info</button>
-        <div id="myDropDown" class="dropdown-content">
+        <button class="dropbtn">More Info</button>
+        <div class="dropdown-content">
             <a href="">Coo Coo Company</a>
-            <a href="">Our Inspiration</a>
+            <a href="https://orteil.dashnet.org/cookieclicker/">Our Inspiration</a>
             <a href="">Development</a>
         </div>
     </div>
+    <br>
     <br>
 
     <div class="container">
@@ -29,6 +30,7 @@
             <button class="buyCompanion">Buy Companion</button>
         </section>
     </div>
+    
 
 
     <div class="container">
@@ -43,5 +45,6 @@
 
     
     <script src="/src/js/app.js"></script>
+    <script src="src/js/menu.js"></script>
 </body>
 </html>
