--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
             <div class="companionCount">Initial Companions</div>
             <button class="buyCompanion">Buy Companion</button>
         </section>
+        <br>
+        <section class="compounder">
+            <div class="compounderCount">Initial Compounders</div>
+            <button class="buyCompounder">Buy Compounder</button>
+        </section>
     </div>
       
 
