Added hover effect for a tag and added click value

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="dropdown">
         <button class="dropbtn">More Info</button>
         <div class="dropdown-content">
-            <a href="">Coo Coo Company</a>
+            <a href="https://wecancodeit-materials.netlify.com/exercises/mastery/cookie-click-counter-calamity/">Coo Coo Company</a>
             <a href="https://orteil.dashnet.org/cookieclicker/">Our Inspiration</a>
-            <a href="">Development</a>
+            <a href="https://github.com/JSilvis73">Development</a>
         </div>
     </div>
     <br>
@@ -35,6 +35,10 @@
         <section class="compounder">
             <div class="compounderCount">Initial Compounders</div>
             <button class="buyCompounder">Buy Compounder</button>
+        </section>
+        <section>
+            <p>Click Value</p>
+            <div class="value"> Click Value</div>
         </section>
     </div>
       
